crates/fec-cli/src/commands/search/snapshots/libfec__commands__search__tests__render_help_text.snap
---
source: crates/fec-cli/src/commands/search/tests.rs
expression: terminal.backend()
snapshot_kind: text
---
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"     Esc quit  Tab focus  Enter select  ↑/↓ navigate  ⌃a Candidates  ⌃b Committees  ⌃e Expenses     "
