crates/fec-cli/src/commands/search/snapshots/libfec__commands__search__tests__render_search_bar_with_spinner.snap
---
source: crates/fec-cli/src/commands/search/tests.rs
expression: terminal.backend()
snapshot_kind: text
---
"┌Search ⠹──────────────────────────────────────────────────────────────────────────────────────────┐"
"│❯ biden                                                                                           │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
