crates/fec-cli/src/commands/search/snapshots/libfec__commands__search__tests__render_search_view_opexp.snap
---
source: crates/fec-cli/src/commands/search/tests.rs
expression: terminal.backend()
snapshot_kind: text
---
"┌Search─────────────────────────────────────────────────────────────────────────────────────────────────┐┌─────────────┐"
"│❯ consulting                                                                                           ││ Cycle: 2024 │"
"└───────────────────────────────────────────────────────────────────────────────────────────────────────┘└─────────────┘"
" Candidates (0)  ⌃a  Committees (0)  ⌃b  Operating Expenses (2)                                                         "
"┌Operating Expenses (2 matches)────────────────────────────────────────────────────────────────────────────────────────┐"
"│   Committee    Recipient                      City            State Date       Amount       Purpose                  │"
"│>> C00703975    ACME CONSULTING LLC            WASHINGTON      DC    2024-03-15 $5000.00     STRATEGY CONSULTING      │"
"│   C00703975    SMITH CONSULTING GROUP         NEW YORK        NY    2024-02-28 $3500.50     MEDIA CONSULTING         │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"               Esc quit  Tab focus  Enter select  ↑/↓ navigate  ⌃a Candidates  ⌃b Committees  ⌃e Expenses               "
